# projektgrupp17-iot-backend

./: .appsody-config.yaml  .gitignore  Cargo.toml  Procfile  README.md  app-deploy.yaml
.github/workflows/: rust.yml
doc/: aliases.js  search-index.js  settings.html  source-files.js
doc/implementors/lazy_static/: trait.LazyStatic.js
doc/proj17_iot_server/: all.html  fn.check_env.html  fn.cors.html  fn.main.html  fn.rocket.html  index.html  sidebar-items.js  struct.ResponsePostProcessor.html
doc/proj17_iot_server/endpoints/: fn.default.html  fn.log_message.html  fn.log_message_json.html  fn.log_message_str.html  fn.rocket_route_fn_default.html  fn.rocket_route_fn_log_message.html  index.html  sidebar-items.js  static.static_rocket_route_info_for_default.html  static.static_rocket_route_info_for_log_message.html  struct.LogMessage.html  struct.RegisterBody.html  struct.StrCont.html  struct.VideoBody.html
doc/proj17_iot_server/environment/: fn.db_environment_values.html  fn.get_current_env.html  index.html  sidebar-items.js  static.ENVIRONMENT_VAR.html  static.PRODUCTION_STRING.html  static.TEST_STRING.html  struct.DbValues.html  struct.DbVars.html
doc/proj17_iot_server/model/: index.html  sidebar-items.js  struct.AdvertVideo.html  struct.AdvertVideoOrder.html  struct.Agency.html  struct.Display.html  struct.Order.html  struct.Receiver.html  struct.Tracker.html
doc/proj17_iot_server/persistance/: index.html  sidebar-items.js
src/: db.rs  devices.rs  environment.rs  integration.rs  integration_tests.rs  main.rs  model.rs  video.rs
src/endpoints/: catchers.rs  default.rs  devices_endpoints.rs  iot_devices.rs  mod.rs  videos.rs  videos_endpoints.rs
src/integration/: test_data.rs
src/integration_tests/: test_data.rs
src/persistance/: mod.rs
src/services/: devices.rs  mod.rs  videos.rs
(+95 files in other folders)
