[package]
name = "proj17_iot-server"
version = "0.0.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_contrib = "0.4.4"
rocket = "0.4.2"
futures = "0.3.4"
mysql = "18.2.0"
time = "=0.2.7"
mysql_common = "*"
lazy_static = "1.4.0"
colour = "*"
reduce = "*"
exitcode = "1.1.2"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"

[[bin]]
name = "proj17_iot-server"
path = "src/main.rs"