[package]
name = "proj17_iot-server"
version = "0.0.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
futures = "0.3.4"
regex = "1.3.7"
time = "=0.2.7"
lazy_static = "1.4.0"
colour = "*"
reduce = "*"
exitcode = "1.1.2"
serde = "1.0.94"
serde_derive = "1.0.94"
serde_json = "1.0.40"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["diesel_mysql_pool", "json"]

[[bin]]
name = "proj17_iot-server"
path = "src/main.rs"