[package]
name = "proj17_iot-server"
version = "1.0.0"
publish = false
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket_contrib = "0.4.4"
rocket = "0.4.2"
futures = "0.3.4"
mysql = "15.1.0"
time = "=0.2.7"
mysql_common = "*"
lazy_static = "1.4.0"
colour = "*"
reduce = "*"
exitcode = "1.1.2"
serde = { version="1.0.94", features = ["derive"]}
serde_derive = "1.0.94"
serde_json = "1.0.40"
rocket_cors = "0.5.1"
rand = "0.7.3"
mockall = "0.7.1"
mocktopus = "0.7.0"

[[bin]]
name = "proj17_iot-server"
path = "src/main.rs"